// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Closed Closed renders correctly with value 0 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "color": "Green",
    }
  }
>
  <i
    className="fas fa-circle"
  />
</button>
`;

exports[`Closed Closed renders correctly with value 1 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "color": "Red",
    }
  }
>
  <i
    className="fas fa-circle"
  />
</button>
`;
